[tool.poetry]
name = "photo_fix"
version = "0.1.0"
description = ""
authors = ["Stream Punk <glad.car1474@fastmail.com>"]

[tool.poetry.scripts]
photo-fix = 'photo_fix.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
ImageHash = "^4.2.1"
click = "^8.0.1"
pyheif-pillow-opener = "^0.1.0"
rawpy = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
